# gitExample

./: CMakeLists.txt  README.md  Semi.hst
applications/app1/: CMakeLists.txt
applications/app1/src/: appApp1.F90  eze1z.f90  force.f90  glbApp1.F90  global.f90  kochin.f90  main.f90  motion.f90  offset.f90  parameters.f90  sdcal.f90  sdsup.f90  solve.f90  trcoef.f90  zswweep.f90
config/: Func_AutoCompile.cmake  config.cmake
src/FortranOOP/: CMakeLists.txt
src/FortranOOP/src/: glbFortranOOP.F90  glbfortranoop.mod  glblib1.mod  pkgFortranOOP.F90  pkgfortranoop.mod  pkglib1.mod
src/FortranOOP/src/geometry/: modGeometry.F90  modgeometry.mod
src/FortranOOP/src/geometry/shape/: shape.inc  shape.typ
src/lib1/: CMakeLists.txt
src/lib1/src/: glbLib1.F90  pkgLib1.F90
src/lib2/: CMakeLists.txt
src/lib2/src/: glbLib2.F90  pkgLib2.F90
tests/testLib1/: CMakeLists.txt
tests/testLib1/src/: glbTestLib1.F90  testTestLib1.F90
tests/testLib2/: CMakeLists.txt
tests/testLib2/src/: glbTestLib2.F90  testTestLib2.F90
